Migrates tests to JUnit 5